unpackaged/main/default/objects/CommissionPayment__c/CommissionPayment__c.object-meta.xml
<CustomObject>
    <label>Commission Payment</label>
    <nameField>
        <displayFormat>CP{0000}</displayFormat>
        <label>Commission Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>