unpackaged/main/default/objects/CommissionPayment__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>CommissionPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>