unpackaged/main/default/objects/CommissionPayment__c/fields/CommissionPayment__c.field-meta.xml
<CustomField>
    <fullName>CommissionPayment__c</fullName>
    <formula>Margin__c * Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>