unpackaged/main/default/objects/CommissionPayment__c/fields/CommissionRuleID__c.field-meta.xml
<CustomField>
    <fullName>CommissionRuleID__c</fullName>
    <label>Commission Rule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>