unpackaged/main/default/objects/CommissionPayment__c/fields/CreditNote__c.field-meta.xml
<CustomField>
    <fullName>CreditNote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>CreditNote__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>CommissionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>