unpackaged/main/default/objects/CommissionPayment__c/fields/CreditNoteID__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteID__c</fullName>
    <formula>CreditNote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note ID</label>
    <type>Text</type>
</CustomField>