unpackaged/main/default/objects/CommissionPayment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>CommissionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>