unpackaged/main/default/objects/CommissionPayment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>CommissionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>