unpackaged/main/default/objects/CommissionPayment__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>Commission__r.Owner:User.FirstName + ' ' + Commission__r.Owner:User.LastName</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>