unpackaged/main/default/objects/CommissionPayment__c/fields/RevenueID__c.field-meta.xml
<CustomField>
    <fullName>RevenueID__c</fullName>
    <label>Revenue Recognised ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>